# clover-mcp-server

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  RELEASING.md  ROADMAP.md  SECURITY.md  pyproject.toml  server.json  server.py
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  publish-registry.yml  release.yml
docs/: ARCHITECTURE.md  DEMO.md  DEPLOY.md  SECURITY.md  clover-app-submission.md  endpoints.md  enterprise-identity.md  eval.md
docs/research/: clover-api-surface.md  current-state.md  gap-analysis.md  mcp-best-practices.md
scripts/: benchmark.py  demo.py  get_sandbox_token.py  seed_sandbox.py  validate_sampling_elicitation.py
src/clover_mcp/: __init__.py  __main__.py  auth.py  client.py  config.py  confirm.py  errors.py  formatting.py  observability.py  prompts.py  remote.py  resources.py  server.py  shaping.py  windowing.py
src/clover_mcp/tools/: ai.py  customers.py  employees.py  inventory.py  merchant.py  orders.py  reporting.py
tests/: conftest.py  test_auth.py  test_config.py  test_observability.py  test_v2.py
tests/contract/: test_formatting.py  test_permission_check.py  test_prompts.py  test_region_resolution.py  test_resources.py  test_shaping_allowlist.py  test_tool_annotations.py  test_window_splitting.py
tests/tools/: test_ai.py  test_customers.py  test_inventory.py  test_merchant.py  test_orders.py  test_reporting.py  test_v11.py  test_writes.py
