[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clover-mcp"
version = "0.7.0"
description = "MCP server for the Clover POS REST API — sales, inventory, orders, customers, and employees for small businesses"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Mikel Diaz", email = "mikeldev62@gmail.com" }]
keywords = ["mcp", "clover", "pos", "small-business", "ai", "anthropic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastmcp>=3.4",  # v2 remote auth (RemoteAuthProvider, JWTVerifier, PRM) needs 3.x
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.scripts]
clover-mcp = "clover_mcp.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.4",
    "mypy>=1.10",
]
# Optional: install with `pip install clover-mcp[otel]` to emit real OpenTelemetry
# spans. Without it, tracing is a no-op and observability falls back to structured
# stderr latency/audit lines — no runtime dependency for users who don't want it.
otel = [
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp>=1.20",
]

[tool.hatch.build.targets.wheel]
packages = ["src/clover_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
files = [
    "src/clover_mcp/config.py",
    "src/clover_mcp/errors.py",
    "src/clover_mcp/windowing.py",
    "src/clover_mcp/formatting.py",
    "src/clover_mcp/shaping.py",
    "src/clover_mcp/auth.py",
    "src/clover_mcp/client.py",
    "src/clover_mcp/observability.py",
]

# OpenTelemetry is an optional extra — don't require its stubs to type-check.
[[tool.mypy.overrides]]
module = ["opentelemetry.*"]
ignore_missing_imports = true
